# vdl

./: .clang-format  .gitignore  ADAPTER_DESIGN_SUMMARY.md  ADAPTER_QUICK_REFERENCE.md  ARCHITECTURE_REFACTORING.md  BUILD.md  CMakeLists.txt  COMPILATION_CONSISTENCY.md  DOCS_SUMMARY.md  DOCUMENTATION_ORGANIZATION_REPORT.txt  EXAMPLES_SUMMARY.md  LICENSE  Makefile  QUICK_REFERENCE_CARD.md  README.md  build.bat  build.sh
cmake/: Catch2Helpers.cmake  CompilerOptions.cmake  FindDependencies.cmake  VdlConfig.cmake.in
docs/: INDEX.md  ORGANIZATION.md  PROJECT_COMPLETION.md  PROJECT_STATUS.md  README_CN.md  STRUCTURE.md
docs/advanced/: VISA_ADAPTATION.md
docs/architecture/: ADAPTER_DESIGN.md  DEVELOPMENT.md
docs/examples/: EXAMPLES_README.md  QUICK_REFERENCE.md  README_CN.md  VNA_SCPI_GUIDE.md
docs/reference/: CONVENIENCE_INTERFACES.md
examples/: 01_basic_usage.cpp  02_error_handling.cpp  03_buffer_operations.cpp  04_codec_and_protocol.cpp  05_complete_communication.cpp  06_vna_scpi_communication.cpp  07_vna_adapter_example.cpp  08_visa_communication_example.cpp  CMakeLists.txt  README.md  VNA_README.md  test_vna.sh  visa_transport.hpp  vna_adapter.hpp
include/vdl/: vdl.hpp
include/vdl/codec/: binary_codec.hpp  codec.hpp
include/vdl/core/: buffer.hpp  compat.hpp  error.hpp  logging.hpp  memory.hpp  noncopyable.hpp  scope_guard.hpp  types.hpp
include/vdl/device/: device.hpp  device_guard.hpp  device_impl.hpp  scpi_adapter.hpp
include/vdl/heartbeat/: heartbeat_config.hpp  heartbeat_runner.hpp  heartbeat_strategy.hpp
include/vdl/heartbeat/strategies/: echo_heartbeat.hpp  ping_heartbeat.hpp  scpi_heartbeat.hpp
include/vdl/protocol/: command.hpp  response.hpp
include/vdl/transport/: mock_transport.hpp  transport.hpp
src/: CMakeLists.txt  buffer.cpp  error.cpp  logging.cpp  memory.cpp
src/heartbeat/: heartbeat_runner.cpp
tests/: CMakeLists.txt  README.md  test_main.cpp  test_utils.hpp
tests/unit/: test_buffer.cpp  test_codec.cpp  test_command.cpp  test_compat.cpp  test_core.cpp  test_device.cpp  test_error.cpp  test_examples.cpp  test_heartbeat.cpp  test_logging.cpp  test_memory.cpp  test_response.cpp  test_scope_guard.cpp  test_transport.cpp  test_types.cpp
